--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   <body>
     <div id="root">
       <div id="initial-loader">
+        <img src="/Doko-logo.png" alt="Doko" />
         <p class="brand">Doko</p>
         <p class="tagline">Your one-stop shop</p>
         <div class="dots">
