--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./src/assets/Doko-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ecommerce-frontend</title>
+    <title>DokoMart</title>
     <style>
       @keyframes pulse {
         0%,
@@ -56,6 +56,7 @@
         background: linear-gradient(90deg, #6366f1, #ec4899, #6366f1);
         background-size: 200% auto;
         -webkit-background-clip: text;
+        background-clip: text;
         -webkit-text-fill-color: transparent;
         animation: shimmer 2s linear infinite;
       }
